--- a/www/views/layouts/main.tt
+++ b/www/views/layouts/main.tt
@@ -21,7 +21,8 @@
 <div class="row">
     <div class="col-sm-8 col-sm-offset-3">
         <div class="well" id="footer">
-            Powered by <a href="http://perldancer.org/">Dancer</a> <% dancer_version %> ♥
+            Fièrement aidé par <a href="http://perldancer.org/">Dancer</a> <% dancer_version %> ♥<br/>
+            Le code est disponible <a href="https://github.com/KaneRoot/dnsmanager">ici</a> ! \o/
         </div>
     </div>
 </div>
