--- a/views/home.tt
+++ b/views/home.tt
@@ -19,14 +19,14 @@
     <table class="table">
     <% FOREACH domain in domains %>
         <tr>
-            <td><% domain %></td>
+            <td><% domain.domain %></td>
 
             <td>
-                <a href="/domain/details/<% domain %>" ><button type="button" class="btn btn-primary">Détails</button></a>
+                <a href="/domain/details/<% domain.domain %>" ><button type="button" class="btn btn-primary">Détails</button></a>
             </td>
 
             <td>
-                <a href="/domain/del/<% domain %>" ><button type="button" class="btn btn-danger">Supprimer</button></a>
+                <a href="/domain/del/<% domain.domain %>" ><button type="button" class="btn btn-danger">Supprimer</button></a>
             </td>
         </tr>
     <% END %>
